force-app/main/default/objects/Insulet_DocuSign_Countersigner__mdt/Insulet_DocuSign_Countersigner__mdt.object-meta.xml
<CustomObject>
    <description>Stores the name of the person changes, update the Signer Name and Signer Email Address in this metadata.</description>
    <label>Insulet DocuSign Countersigner</label>
    <pluralLabel>Insulet DocuSign Countersigners</pluralLabel>
</CustomObject>