force-app/main/default/objects/Insulet_DocuSign_Countersigner__mdt/fields/Signer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email_Address__c</fullName>
    <label>Signer Email Address</label>
    <type>Email</type>
</CustomField>