force-app/main/default/objects/Insulet_DocuSign_Countersigner__mdt/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <label>Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>